removing vendor folder from gitignire.

--- a/_vendor/github.com/adamglenn/wvu-ds-v2-hugo-modules-hero/layouts/partials/components/hero.html
+++ b/_vendor/github.com/adamglenn/wvu-ds-v2-hugo-modules-hero/layouts/partials/components/hero.html
@@ -1,3 +1,7 @@
-<h2>Hero Heading</h2>
-<p>Hero body.</p>
-<a href="#" class="btn btn-primary">Call to Action</a>
+{{ with .component }}
+  <h2 class="display-3 wvu-shout text-wvu-blue">{{ .heading.text }}</h2>
+  <p class="lead">{{ .body.text }}</p>
+  {{ if .ctas }}
+    {{ range .ctas }}<a class="btn btn-primary mb-1" href="{{ .url }}">{{ .text }}</a> {{ end }}
+  {{ end }}
+{{ end }}
